# zuppa

./: Cargo.toml
assets/: players.ron
assets/phrases/: default.zp  ibra.zp  ratto.zp
src/: connection.rs  lib.rs  main.rs  netutils.rs  noun.rs  phases.rs
src/client/: main.rs  phases.rs
src/client/view/: base.rs  mod.rs  simple_term.rs
src/game/: mod.rs  state.rs  world.rs
src/netmsg/: mod.rs
src/phrase/: mod.rs
src/phrases/: mod.rs
src/view/: base.rs  simple_term.rs
src/world/: builder.rs  mod.rs  zuppa.rs
terview/: Cargo.toml
terview/src/: base.rs  simple_term.rs
