[package]
name = "zuppa"
version = "0.1.0"
authors = ["Stefano Montesi <dincio.montesi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = "0.4.0"
nom = "5.1.1"
specs = "0.16.1"
specs-derive = "0.4.1"
derive_builder = "0.9.0"
