[package]
name = "zuppa"
version = "0.1.0"
authors = ["Stefano Montesi <dincio.montesi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
rand = "0.7.3"
ron = "0.5.1"
serde = "1.0.104"
lazy_static = "1.4.0"
regex = "1.3.5"
maplit = "1.0.2"
text_io = "0.1.8"
single = "1.0.0"
wc = { git = "https://github.com/Bietola/wc" }
log = "0.4.8"
log4rs = "0.10.0"
terview = { path = "terview" }
async-std = "1.5.0"
futures = "0.3.4"
